--- a/proyecto/src/app/app.component.html
+++ b/proyecto/src/app/app.component.html
@@ -1,6 +1,6 @@
-<!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center">
-  <app-login></app-login>
+  <app-top-menu></app-top-menu>
+  
 </div>
 
 <router-outlet></router-outlet>
