--- a/proyecto/src/app/login/login.component.html
+++ b/proyecto/src/app/login/login.component.html
@@ -15,9 +15,12 @@
     </div>
   </div>
   <div class="modal-footer">
-    <button type="button" class="btn btn-primary" (click)="modal.close('Save click')">Entrar</button>
+    <button type="button" class="btn btn-primary" (click)="modal.close('Save click')">Entrar</button>        
   </div>
 </ng-template> 
-
-<button class="btn btn-link" (click)="open(content)">Login</button>
+<div>
+    <ul>
+        <li><button class="btn btn-link" (click)="open(content)">Login</button></li>
+    </ul>
+</div>
 
