Display products: UI changes

--- a/proyecto/src/app/app.component.html
+++ b/proyecto/src/app/app.component.html
@@ -1,6 +1,6 @@
-<div style="text-align:center">
+<div>
   <app-top-menu></app-top-menu>
-  
+  <app-dashboard></app-dashboard>
 </div>
 
 <router-outlet></router-outlet>
