--- a/proyecto/src/app/menu/top-menu/login/login.component.html
+++ b/proyecto/src/app/menu/top-menu/login/login.component.html
@@ -19,5 +19,5 @@
   </div>
 </ng-template> 
 
-<button class="btn btn-link" (click)="open(content)">Login</button>
+<button class="btn button-link" (click)="open(content)">Login</button>
 
