--- a/proyecto/src/app/dashboard/dashboard.component.html
+++ b/proyecto/src/app/dashboard/dashboard.component.html
@@ -1,10 +1,8 @@
 <div>
-    <div class="col-lg-4 col-md-4 item">
+    <div class="col-lg-3 col-md-3 section">
         BUSQUEDA
     </div>
-    <div class="col-lg-8 col-md-8 item">
+    <div class="col-lg-9 col-md-9 section">
         <app-products></app-products>
-
     </div>
-
 </div>
