--- a/proyecto/src/app/dashboard/products/products.component.html
+++ b/proyecto/src/app/dashboard/products/products.component.html
@@ -1,11 +1,14 @@
 <div>
-  <div *ngFor = "let product of myProducts" class="col-lg-4 col-md-6 col-sm-6 item">
-    <div>
+  <div *ngFor = "let product of myProducts" class="col-lg-3 col-md-5 col-sm-5 item">
+    <div >
       <img src="assets\image.png">
       <p>{{product.nombre}}</p>
-      <p>{{product.descripcion}}</p>
-      <button class="btn"><img src="assets\edit.png"></button>
-
+      <div>
+        <p class="productData">X unidades en stock</p>
+        <p class="productData">Precio Unitario: $9.99</p>
+        <p class="productData">Precion Mayoreo: $0.00</p>
+        <button class="btn"><img src="assets\edit.png"></button>
+      </div>
       <!--
       <p>{{product.inventario}}</p>
       <p>{{product.descripcion}}</p>
