--- a/proyecto/src/app/menu/top-menu/top-menu.component.html
+++ b/proyecto/src/app/menu/top-menu/top-menu.component.html
@@ -1,3 +1,3 @@
-<ul>
-    <li><a href="#about"><app-login></app-login></a></li>
+<ul class="menu">
+    <li><a href="#login"><app-login></app-login></a></li>
 </ul>
