--- a/proyecto/src/app/inicio/inicio.component.html
+++ b/proyecto/src/app/inicio/inicio.component.html
@@ -1,5 +1,5 @@
 <div>
   <ul>
-      <li><button style="position: absolute; right: 0" class="btn btn-link" (click)="salir()">Salir</button></li>
+      <li><button style="position: absolute; right: 0" class="btn button-link" (click)="salir()">Salir</button></li>
   </ul>
 </div>
