--- a/proyecto/src/app/menu/top-menu/top-menu.component.html
+++ b/proyecto/src/app/menu/top-menu/top-menu.component.html
@@ -1,5 +1,5 @@
 
 <ul class="menu">
     <li><a href="#login"><app-login></app-login></a></li>
-    <li><a style="position: absolute; right: 0" href=""><app-logout></app-logout></a></li>
+    <li><a href=""><app-inicio></app-inicio></a></li>
 </ul>
