--- a/proyecto/src/app/app.component.html
+++ b/proyecto/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div>
-  <app-top-menu></app-top-menu>
-  <app-dashboard></app-dashboard>
+  <!--<app-dashboard></app-dashboard>-->
+  <router-outlet></router-outlet>
 </div>
-<router-outlet></router-outlet>
+
