--- a/proyecto/src/app/menu/top-menu/logOut/logout.component.html
+++ b/proyecto/src/app/menu/top-menu/logOut/logout.component.html
@@ -1,1 +1,6 @@
-<button class="btn button-link" (click)="salir()">Salir</button>
+<ul class="menu">
+    <li><a style="position: absolute; right: 0" href="/login">
+        <button class="btn button-link" (click)="salir()">Salir
+        </button></a>
+    </li>
+</ul>
