--- a/proyecto/src/app/menu/register-product/register-product.component.html
+++ b/proyecto/src/app/menu/register-product/register-product.component.html
@@ -1,5 +1,6 @@
+<app-logout></app-logout>
 
-<div class="container">
+<div class="container form">
 
     <form method="POST" class="form" (ngSubmit)="submit()">
         <h1>Registro producto</h1>
