Search product by name - UI

--- a/proyecto/src/app/dashboard/dashboard.component.html
+++ b/proyecto/src/app/dashboard/dashboard.component.html
@@ -1,9 +1,10 @@
 <app-logout></app-logout>
 <div>
     <div class="col-lg-3 col-md-3 section">
-        BUSQUEDA
+
     </div>
     <div class="col-lg-9 col-md-9 section">
+        <app-search></app-search>
         <app-products></app-products>
     </div>
 </div>
