--- a/proyecto/src/app/menu/top-menu/logOut/logout.component.html
+++ b/proyecto/src/app/menu/top-menu/logOut/logout.component.html
@@ -1,4 +1,12 @@
 <ul class="menu">
+    <li><a href="/register-product">
+        <button class="btn button-link">New Product
+        </button></a>
+    </li>
+    <li><a href="/register-user">
+        <button class="btn button-link">New User
+        </button></a>
+    </li>
     <li><a style="position: absolute; right: 0" href="/login">
         <button class="btn button-link" (click)="salir()">Salir
         </button></a>
