Edit product price UI and add to cart icon added

--- a/proyecto/src/app/dashboard/products/products.component.html
+++ b/proyecto/src/app/dashboard/products/products.component.html
@@ -7,12 +7,12 @@
         <p class="productData">X unidades en stock</p>
         <p class="productData">Precio Unitario: $9.99</p>
         <p class="productData">Precion Mayoreo: $0.00</p>
-        <button class="btn"><img src="assets\edit.png"></button>
+        <a href="/edit-product">
+          <button class="btn"><img src="assets\edit.png">
+        </button></a>
+        <button class="btn"><img src="assets\Minus.png"></button>
+        <button class="btn"><img src="assets\shoppingcart.png"></button>
       </div>
-      <!--
-      <p>{{product.inventario}}</p>
-      <p>{{product.descripcion}}</p>
-      <p>{{product.descripcion}}</p> -->
     </div>
   </div>
 </div>
