--- a/proyecto/src/app/menu/register-user/register-user.component.html
+++ b/proyecto/src/app/menu/register-user/register-user.component.html
@@ -1,7 +1,7 @@
 <app-logout></app-logout>
 <div class = "container form" >
     <a ng-click="searchUser()"></a>
-    <form role = "form" class="form" ng-hide="ifSearchUser">
+    <form  class="form" ng-hide="ifSearchUser">
         <h2>Registro de usuarios</h2>
         <div class = "form-group">
             <label for = "name"> Nombre:  </label>
