--- a/proyecto/src/app/menu/edit-product/edit-product.component.html
+++ b/proyecto/src/app/menu/edit-product/edit-product.component.html
@@ -28,7 +28,7 @@
       <input type="number" name="CostoNuevo">
     </div>
     <div class="form-group">
-        <a href="/home">
+        <a routerLink="/home">
           <button type="button" class="btn btn-primary final-button">Salvar</button>
         </a>
     </div>
