--- a/proyecto/src/app/menu/top-menu/logOut/logout.component.html
+++ b/proyecto/src/app/menu/top-menu/logOut/logout.component.html
@@ -1,13 +1,13 @@
 <ul class="menu">
-    <li><a href="/register-product">
+    <li><a routerLink="/register-product">
         <button class="btn button-link">New Product
         </button></a>
     </li>
-    <li><a href="/register-user">
+    <li><a routerLink="/register-user">
         <button class="btn button-link">New User
         </button></a>
     </li>
-    <li><a style="position: absolute; right: 0" href="/login">
+    <li><a style="position: absolute; right: 0" routerLink="/login">
         <button class="btn button-link" (click)="salir()">Salir
         </button></a>
     </li>
