--- a/proyecto/src/app/menu/register-product/register-product.component.html
+++ b/proyecto/src/app/menu/register-product/register-product.component.html
@@ -1,32 +1,34 @@
 <app-logout></app-logout>
 
-<div class="container form" >
-    <form method="POST" class="form" (ngSubmit)="submit()">
-        <h1>Registro producto</h1>
-        <div class="form-group">
-            <label for="txtNombre">Nombre:</label>
-            <input type="text" class="form-control" id="txtNombre" name="txtNombre" [(ngModel)]="model.nombre"/>
+<div class = "container form" >
+    <form method = "POST" class = "form" (ngSubmit) = "submit()">
+        <h2>Registro de producto</h2>
+        <div class = "form-group">
+            <label for = "txtNombre">Nombre:</label>
+            <input type = "text" class = "form-control" id = "txtNombre" name = "txtNombre" />
         </div>
-        <div class="form-group">
-            <label for="txtPrecioP">Precio publico:</label>
-            <input type="number" class="form-control" id="txtPrecioP" name="txtPrecioP" [(ngModel)]="model.precioPublico"/>
+        <div class = "form-group">
+            <label for = "txtPrecioP">Precio publico:</label>
+            <input type = "number" class = "form-control" id = "txtPrecioP" name = "txtPrecioP" />
         </div>
-        <div class="form-group">
-          <label for="txtPrecioM">Precio mayoreo:</label>
-          <input type="number" class="form-control" class="form-control" id="txtPrecioM" name="txtPrecioM" [(ngModel)]="model.precioMayoreo"/>
+        <div class = "form-group">
+            <label for = "txtPrecioM">Precio mayoreo:</label>
+            <input type = "number" class = "form-control" class = "form-control" id="txtPrecioM" name = "txtPrecioM" />
         </div>
-        <div class="form-group">
-          <label for="txtCosto">Costo:</label>
-          <input type="number" class="form-control" id="txtCosto" name="txtCosto" [(ngModel)]="model.costo"/>
+        <div class = "form-group">
+            <label for = "txtCosto">Costo:</label>
+            <input type = "number" class = "form-control" id = "txtCosto" name = "txtCosto" />
         </div>
-        <div class="form-group">
-          <label for="txtCategoria">Categoria:</label>
-          <input type="text" class="form-control" id="txtCategoria" name="txtCategoria" [(ngModel)]="model.categoria"/>
+        <div class = "form-group">
+            <label for = "txtCategoria">Categoria:</label>
+            <input type = "text" class = "form-control" id = "txtCategoria" name = "txtCategoria" />
         </div>
-        <div class="form-group">
-          <label for="txtMarca">Marca:</label>
-          <input type="text" class="form-control" id="txtMarca" name="txtMarca" [(ngModel)]="model.marca"/>
+        <div class = "form-group">
+            <label for = "txtMarca">Marca:</label>
+            <input type = "text" class="form-control" id = "txtMarca" name = "txtMarca" />
         </div>
-        <button type="submit" class="form-control" id="buttonID" class="btn btn-primary">Guardar</button>
-    </form>
+        <a routerLink = "/home">
+            <button type = "submit" class = "form-control btn btn-primary" id = "buttonID" ng-click = "saveContact()">Guardar</button>
+        </a>
+    </form>s
 </div>
