--- a/proyecto/src/app/menu/top-menu/top-menu.component.html
+++ b/proyecto/src/app/menu/top-menu/top-menu.component.html
@@ -1,2 +1,9 @@
+<ul class = "menu">
+    <li><a>
+      <button class = "btn button-link" routerLink = "/login">Entrar
+      </button></a>
+    </li>
+</ul>
+
 
 
