--- a/proyecto/src/app/dashboard/products/products.component.html
+++ b/proyecto/src/app/dashboard/products/products.component.html
@@ -8,7 +8,7 @@
         <p class="productData">Precio Unitario: $9.99</p>
         <p class="productData">Precion Mayoreo: $0.00</p>
         <a routerLink="/{{product.nombre}}/edit-product" >
-            <button onclick="editProduct(product.nombre)" class="btn"><img src="assets\edit.png">
+            <button class="btn"><img src="assets\edit.png">
             </button>
         </a>
         <button class="btn"><img src="assets\Minus.png"></button>
