--- a/proyecto/src/app/menu/register-product/register-product.component.html
+++ b/proyecto/src/app/menu/register-product/register-product.component.html
@@ -40,6 +40,6 @@
             <label for="txtImagen">Imagen:</label>
             <input type="url" class="form-control" id="txtImagen" name="txtImagen" [(ngModel)]="product.imagen"/>
         </div>
-        <button id="buttonID" class=" btn btn-primary" (click)="edit ? editItem() : saveProduct()" >Guardar</button>
+        <button id="buttonID" class=" btn btn-primary final-button" (click)="edit ? editItem() : saveProduct()" >Guardar</button>
     </form>
 </div>
