--- a/proyecto/src/app/menu/top-menu/login/login.component.css
+++ b/proyecto/src/app/menu/top-menu/login/login.component.css
@@ -1,20 +1,25 @@
 ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #333;
-  }
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+}
 
-  li {
-    float: left;
-    height: 45px;
-  }
+li {
+  float: left;
+  height: 45px;
+}
 
-  li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-  }
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+center{
+  margin-top: 5%; 
+}
+
