--- a/proyecto/src/app/dashboard/products/products.component.html
+++ b/proyecto/src/app/dashboard/products/products.component.html
@@ -1,21 +1,8 @@
-<div>
-  <div *ngFor = "let product of products" class="col-lg-3 col-md-5 col-sm-5 item">
-    <div >
-      <img src="assets\image.png">
-      <p>{{product.nombre}}</p>
-      <div>
-        <p class="productData">X unidades en stock</p>
-        <p class="productData">Precio Unitario: $9.99</p>
-        <p class="productData">Precion Mayoreo: $0.00</p>
-        <a routerLink="/{{product.nombre}}/edit-product" >
-            <button class="btn"><img src="assets\edit.png">
-            </button>
-        </a>
-        <button class="btn"><img src="assets\Minus.png"></button>
-        <button class="btn"><img src="assets\shoppingcart.png"></button>
-      </div>
-    </div>
+<div class="col-lg-3 col-md-5 col-sm-5 item">
+    <app-product
+      *ngFor="let product of products; let i = index"
+      [product]="productEl"
+      [index]="i"></app-product>
   </div>
-</div>
 
 
