--- a/proyecto/src/app/dashboard/products/products.component.html
+++ b/proyecto/src/app/dashboard/products/products.component.html
@@ -1,7 +1,7 @@
 <div class="col-lg-3 col-md-5 col-sm-5 item">
     <app-product
       *ngFor="let product of products; let i = index"
-      [product]="productEl"
+      [product]="product"
       [index]="i"></app-product>
   </div>
 
