--- a/proyecto/src/app/menu/top-menu/login/login.component.html
+++ b/proyecto/src/app/menu/top-menu/login/login.component.html
@@ -2,19 +2,17 @@
 <div>
   <div class="col-md-2 col-lg-3"></div>
   <div class="container form col-md-8 col-lg-6">
-    <form (ngSubmit)="onSignin(f)" #f="ngForm" class = "form">
+    <form (ngSubmit)="onSignin(f)" #f="ngForm">
         <h4>Iniciar Sesion</h4>
         <div class  =  "form-group">
-          Usuario: <br>
-          <input type = "text" name = "username" id="username" ngModel class="form-control">
+          <label for="email">Correo: </label><br>
+          <input type = "email" name = "email" id="email" ngModel class="form-control">
         </div>
         <div class  =  "form-group">
-          Contrasena: <br>
-          <input type = "password" name = "Password" id="password" ngModel class="form-control">
+          <label for="password">Contrasena: </label><br>
+          <input type = "password" name = "password" id="password" ngModel class="form-control">
         </div>
-        <a routerLink = "/home">
           <button type = "submit" class = "btn btn-primary final-button" [disabled]="!f.valid">Entrar</button>
-        </a>
     </form>
   </div>
 </div>
