--- a/proyecto/src/app/app.component.html
+++ b/proyecto/src/app/app.component.html
@@ -1,5 +1,5 @@
+<app-top-menu (featureSelected)="onNavigate($event)"></app-top-menu>
 <div>
-  <!--<app-dashboard></app-dashboard>-->
   <router-outlet></router-outlet>
 </div>
 
