--- a/proyecto/src/app/dashboard/products/products.component.css
+++ b/proyecto/src/app/dashboard/products/products.component.css
@@ -2,3 +2,10 @@
      max-width: 100%;
      max-height: 100%;
  }
+ input{
+    width: 80%;
+    height: 38px;
+}
+.spacing{
+    margin-bottom: 20px;
+}
