--- a/proyecto/src/app/dashboard/products/products.component.html
+++ b/proyecto/src/app/dashboard/products/products.component.html
@@ -1,8 +1,18 @@
-<div class="col-lg-3 col-md-5 col-sm-5 item">
-    <app-product
-      *ngFor="let product of products; let i = index"
-      [product]="product"
-      [index]="i"></app-product>
+<div class = "spacing">
+  <div class = "col-md-4 col-lg-4 section">
   </div>
+  <div class = "col-md-8 col-lg-8 section">
+      <input type = "text" [(ngModel)] = text>
+      <button class = "btn" (click) = "search()">
+        <img src = "assets/search-icon.png">
+      </button>
+  </div>
+</div>
 
+<div class = "col-lg-3 col-md-5 col-sm-5 item">
+    <app-product
+      *ngFor = "let product of products; let i = index"
+      [product] = "product"
+      [index] = "i"></app-product>
+</div>
 
