--- a/proyecto/src/app/menu/top-menu/login/login.component.html
+++ b/proyecto/src/app/menu/top-menu/login/login.component.html
@@ -1,16 +1,19 @@
-<app-top-menu></app-top-menu>
 <div>
   <div class="col-md-2 col-lg-3"></div>
   <div class="container form col-md-8 col-lg-6">
     <form (ngSubmit)="onSignin(f)" #f="ngForm">
         <h4>Iniciar Sesion</h4>
         <div class  =  "form-group">
-          <label for="email">Correo: </label><br>
+          <label for = "email">Correo: </label><br>
           <input type = "email" name = "email" id="email" ngModel class="form-control">
         </div>
         <div class  =  "form-group">
           <label for="password">Contrasena: </label><br>
-          <input type = "password" name = "password" id="password" ngModel class="form-control">
+          <input 
+          type = "password" 
+          name = "password" 
+          id="password" ngModel 
+          class="form-control">
         </div>
           <button type = "submit" class = "btn btn-primary final-button" [disabled]="!f.valid">Entrar</button>
     </form>
