Filtro categorias, incompleto pero sin fallas

--- a/proyecto/src/app/dashboard/home/home.component.html
+++ b/proyecto/src/app/dashboard/home/home.component.html
@@ -1,1 +1,5 @@
-<app-front-page></app-front-page>
+<div>
+    <img src="../../../assets/AndroidLogo.png">
+    <h1>LabCel</h1>
+    <h2>Tienda de articulos electronicos</h2>
+</div>
