--- a/proyecto/src/app/dashboard/products/product/product.component.html
+++ b/proyecto/src/app/dashboard/products/product/product.component.html
@@ -5,7 +5,7 @@
       <p class="productData">{{ product.stock }} unidades en stock</p>
       <p class="productData">Precio Unitario: {{ product.precio }}</p>
       <p class="productData">Precion Mayoreo: {{ product.precioMayoreo }}</p>
-      <a (click) = "editProduct()">
+      <a (click) = "onEditProduct()">
           <button class="btn"><img src="assets\edit.png">
           </button>
       </a>
