--- a/proyecto/src/app/dashboard/dashboard.component.html
+++ b/proyecto/src/app/dashboard/dashboard.component.html
@@ -1,5 +1,17 @@
 <div>
     <div class="col-lg-3 col-md-3 section">
+        <div class="list-group">   
+            <a href="#" class="list-group-item active aRef" ><b>Categorias</b></a> 
+            <div [innerHTML]="myCategories">
+                
+            </div>
+        </div>
+        <div class="list-group">   
+            <a href="#" class="list-group-item active aRef" ><b>Marcas</b></a> 
+            <div [innerHTML]="myBranches">
+
+            </div>
+        </div>
     </div>
     <div class="col-lg-9 col-md-9 section">
         <app-products></app-products>
