--- a/proyecto/src/app/menu/register-product/register-product.component.html
+++ b/proyecto/src/app/menu/register-product/register-product.component.html
@@ -2,45 +2,45 @@
 <div class="container form" >
     <form class="form" >
         <h1>Registro producto</h1>
-          <div class="form-group">
+        <button id="storeButton" class=" btn btn-primary final-button" (click)="saveProducts()">Guardar productos</button>
+        <div class="form-group">
             <label for="txtNombre">Nombre:</label>
             <input type="text" class="form-control" id="txtNombre" name="txtNombre" [(ngModel)]="product.nombre"/>
-          </div>
-          <div class="form-group">
-              <label for="txtPrecioP">Precio publico:</label>
-              <input type="number" class="form-control" id="txtPrecioP" name="txtPrecioP" [(ngModel)]="product.precio"/>
-          </div>
+        </div>
+        <div class="form-group">
+            <label for="txtPrecioP">Precio publico:</label>
+            <input type="number" class="form-control" id="txtPrecioP" name="txtPrecioP" [(ngModel)]="product.precio"/>
+        </div>
 
-          <div class="form-group">
-              <label for="txtPrecioM">Precio mayoreo:</label>
-              <input type="number" class="form-control"id="txtPrecioM" name="txtPrecioM" [(ngModel)]="product.precioMayoreo"/>
-          </div>
+        <div class=  "form-group">
+            <label for="txtPrecioM">Precio mayoreo:</label>
+            <input type="number" class="form-control"id="txtPrecioM" name="txtPrecioM" [(ngModel)]="product.precioMayoreo"/>
+        </div>
 
-          <div class="form-group">
-              <label for="txtCosto">Costo:</label>
-              <input type="number" class="form-control" id="txtCosto" name="txtCosto" [(ngModel)]="product.costo"/>
-          </div>
+        <div class="form-group">
+            <label for="txtCosto">Costo:</label>
+            <input type="number" class="form-control" id="txtCosto" name="txtCosto" [(ngModel)]="product.costo"/>
+        </div>
 
-          <div class="form-group">
-              <label for="txtCategoria">Categoria:</label>
-              <input type="text" class="form-control" id="txtCategoria" name="txtCategoria" [(ngModel)]="product.categoria"/>
-          </div>
+        <div class="form-group">
+            <label for="txtCategoria">Categoria:</label>
+            <input type="text" class="form-control" id="txtCategoria" name="txtCategoria" [(ngModel)]="product.categoria"/>
+        </div>
 
-          <div class="form-group">
-              <label for="txtMarca">Marca:</label>
-              <input type="text" class="form-control" id="txtMarca" name="txtMarca" [(ngModel)]="product.marca"/>
-          </div>
+        <div class="form-group">
+            <label for="txtMarca">Marca:</label>
+            <input type="text" class="form-control" id="txtMarca" name="txtMarca" [(ngModel)]="product.marca"/>
+        </div>
 
-          <div class="form-group">
+        <div class="form-group">
             <label for="txtCantidad">Cantidad:</label>
             <input type="number" class="form-control" id="txtCantidad" name="txtCantidad" [(ngModel)]="product.stock"/>
         </div>
 
-        <div class="form-group">
+        <div class = "form-group">
             <label for="txtImagen">Imagen:</label>
             <input type="url" class="form-control" id="txtImagen" name="txtImagen" [(ngModel)]="product.imagen"/>
         </div>
-        <button id="saveButton" class=" btn btn-primary final-button" (click)="edit ? editItem() : saveProduct()">Salvar</button>
-        <button id="storeButton" class=" btn btn-primary final-button" (click)="saveProducts()">Guardar todos</button>
+        <button id="saveButton" class=" btn btn-primary final-button" (click)="edit ? editItem() : saveProduct()">Salvar producto</button>
     </form>
 </div>
