--- a/proyecto/src/app/dashboard/products/product/product.component.html
+++ b/proyecto/src/app/dashboard/products/product/product.component.html
@@ -1,6 +1,6 @@
-<div>
-    <img src="assets\image.png">
-    <p>{{ product.nombre }}</p>
+<div >
+    <img class="productData" height=150 width= 100% src="{{product.imagen}}">
+    <p class="productName">{{ product.nombre }}</p>
     <div>
       <p class="productData">{{ product.stock }} unidades en stock</p>
       <p class="productData">Precio Unitario: {{ product.precio }}</p>
