Sales format added

--- a/proyecto/src/app/dashboard/products/product/product.component.html
+++ b/proyecto/src/app/dashboard/products/product/product.component.html
@@ -10,6 +10,6 @@
           </button>
       </a>
       <button class="btn"><img src="assets\Minus.png"></button>
-      <button class="btn"><img src="assets\shoppingcart.png"></button>
+      <button class="btn" (click) = "newSale()"><img src="assets\shoppingcart.png"></button>
     </div>
 </div>
