--- a/proyecto/src/app/dashboard/products/products.component.html
+++ b/proyecto/src/app/dashboard/products/products.component.html
@@ -8,7 +8,9 @@
       </button>
   </div>
 </div>
-
+<div>
+    <pagination-controls (pageChange) = "currPage = $event"></pagination-controls>
+</div>
 <div>
     <app-product class = "col-lg-3 col-md-5 col-sm-5 col-xl-3 item product"
       *ngFor = "let product of products | paginate:{itemsPerPage:9,currentPage:currPage}"
@@ -16,5 +18,3 @@
       [index] = "i">
     </app-product>
 </div>
-
-<pagination-controls (pageChange) = "currPage = $event"></pagination-controls>
