--- a/proyecto/src/app/dashboard/products/products.component.html
+++ b/proyecto/src/app/dashboard/products/products.component.html
@@ -13,7 +13,7 @@
 </div>
 <div>
     <app-product class = "col-lg-3 col-md-5 col-sm-5 col-xl-3 item product"
-      *ngFor = "let product of products | paginate:{itemsPerPage:9,currentPage:currPage}"
+      *ngFor = "let product of products | paginate:{itemsPerPage:9,currentPage:currPage}; let i = index"
       [product] = "product"
       [index] = "i">
     </app-product>
